[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/QuestMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Icons/Button_Up_Texture.png" type="Texture" id=5]
[ext_resource path="res://Icons/Button_Pressed_Texture.png" type="Texture" id=6]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=7]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=8]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=9]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=11]

[node name="QuestMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_right = 1052.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
text = "Quest Journal"
align = 1
valign = 1

[node name="Exit" parent="FullMenu/Header" instance=ExtResource( 3 )]
margin_left = 1056.0
margin_right = 1256.0
margin_bottom = 82.0
rect_min_size = Vector2( 200, 75 )

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 659.0
size_flags_vertical = 3

[node name="Margin1" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 573.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="OptionsPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 240.0
margin_bottom = 573.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="Main Quests" parent="FullMenu/TabsContainer/OptionsPanel" instance=ExtResource( 3 )]
margin_right = 216.0

[node name="Side Quests" parent="FullMenu/TabsContainer/OptionsPanel" instance=ExtResource( 3 )]
margin_top = 144.0
margin_right = 216.0
margin_bottom = 284.0

[node name="QuestType3" type="ColorRect" parent="FullMenu/TabsContainer/OptionsPanel"]
margin_top = 288.0
margin_right = 216.0
margin_bottom = 428.0
size_flags_vertical = 3
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 0 )

[node name="QuestType3Button" type="TextureButton" parent="FullMenu/TabsContainer/OptionsPanel/QuestType3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/OptionsPanel/QuestType3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Quest Type 3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestType4" type="ColorRect" parent="FullMenu/TabsContainer/OptionsPanel"]
margin_top = 432.0
margin_right = 216.0
margin_bottom = 573.0
size_flags_vertical = 3
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 0 )

[node name="QuestTyp4Button" type="TextureButton" parent="FullMenu/TabsContainer/OptionsPanel/QuestType4"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/OptionsPanel/QuestType4"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Quest Type 4"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 244.0
margin_right = 264.0
margin_bottom = 573.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="QuestSelectionBkg" type="ColorRect" parent="FullMenu/TabsContainer"]
margin_left = 268.0
margin_right = 748.0
margin_bottom = 573.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.52549 )

[node name="QuestSelection" type="VBoxContainer" parent="FullMenu/TabsContainer/QuestSelectionBkg"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveCompleteHbox" type="HBoxContainer" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection"]
margin_right = 480.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Active" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection/ActiveCompleteHbox" instance=ExtResource( 3 )]
margin_right = 200.0
margin_bottom = 105.0
rect_min_size = Vector2( 200, 50 )

[node name="Label" type="Label" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection/ActiveCompleteHbox"]
margin_left = 204.0
margin_right = 276.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Complete" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection/ActiveCompleteHbox" instance=ExtResource( 3 )]
margin_left = 280.0
margin_right = 480.0
margin_bottom = 105.0
rect_min_size = Vector2( 200, 50 )

[node name="Label" type="Label" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection"]
visible = false
margin_top = 98.0
margin_right = 480.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="QuestListScroll" type="ScrollContainer" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection"]
margin_top = 109.0
margin_right = 480.0
margin_bottom = 573.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/QuestSelectionBkg/QuestSelection/QuestListScroll"]
margin_right = 480.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin3" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 752.0
margin_right = 772.0
margin_bottom = 573.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="QuestDetailsBkg" type="ColorRect" parent="FullMenu/TabsContainer"]
margin_left = 776.0
margin_right = 1256.0
margin_bottom = 573.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.596078 )

[node name="QuestDetails" type="VBoxContainer" parent="FullMenu/TabsContainer/QuestDetailsBkg"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestName" type="Label" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails"]
margin_right = 480.0
margin_bottom = 57.0
text = "Quest Name"
align = 1
valign = 1
autowrap = true

[node name="Details" type="Label" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails"]
margin_top = 61.0
margin_right = 480.0
margin_bottom = 118.0
text = "Details"
valign = 1
autowrap = true

[node name="DetailsScrollCont" type="ScrollContainer" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails"]
margin_top = 122.0
margin_right = 480.0
margin_bottom = 297.0
rect_min_size = Vector2( 0, 175 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Quest_Detail_Cont" type="Label" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails/DetailsScrollCont"]
margin_right = 480.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 2 )
autowrap = true

[node name="Objectives" type="Label" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails"]
margin_top = 301.0
margin_right = 480.0
margin_bottom = 358.0
text = "Objectives"
valign = 1

[node name="ObjectivesScrollCont" type="ScrollContainer" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails"]
margin_top = 362.0
margin_right = 480.0
margin_bottom = 573.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/QuestDetailsBkg/QuestDetails/ObjectivesScrollCont"]

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 573.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 663.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
